bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: value update is not a member of Boolean
while (x==false) {if (estSurMessage()=false) {x=true}
                      ^